CSS and JS bugfixes
Words in messages now wrap instead of overlap
Fixed bug with runaway RAM usage if the time to load messages exceeds 1 second

--- a/HomePage/homePage.css
+++ b/HomePage/homePage.css
@@ -154,6 +154,7 @@ body {
 .message {
     float: right;
     margin-right: 1vw;
+    overflow-wrap: break-word;
 }
 
 .message::before {
